--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 attrs==22.2.0
+boto3==1.26.97
+botocore==1.29.97
 iniconfig==2.0.0
+jmespath==1.0.1
 numpy==1.24.2
 packaging==23.0
 pandas==1.5.3
@@ -8,4 +11,6 @@ pyarrow==11.0.0
 pytest==7.2.2
 python-dateutil==2.8.2
 pytz==2022.7.1
+s3transfer==0.6.0
 six==1.16.0
+urllib3==1.26.15
