--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+asn1crypto==1.5.1
 attrs==22.2.0
 boto3==1.26.97
 botocore==1.29.97
@@ -15,6 +16,7 @@ moto==4.1.5
 numpy==1.24.2
 packaging==23.0
 pandas==1.5.3
+pg8000==1.29.4
 pluggy==1.0.0
 pyarrow==11.0.0
 pycparser==2.21
@@ -25,6 +27,7 @@ PyYAML==6.0
 requests==2.28.2
 responses==0.23.1
 s3transfer==0.6.0
+scramp==1.4.4
 six==1.16.0
 types-PyYAML==6.0.12.8
 urllib3==1.26.15
