--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
             - name: Use Python
             uses: actions/setup-python@v4
             with:
-                python-version: '3.9'
+                python-version: "3.9"
             - name: Use Make
             run: sudo apt install make -y
             - name: Use Requirements
