--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
             working-directory: ./terraform
           - name: Terraform Plan
             id: plan
+            run: terraform plan
             working-directory: ./terraform
           - name: Terraform Plan Status
             if: steps.plan.outcome == 'failure'
