--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+asgiref==3.6.0
 asn1crypto==1.5.1
 attrs==22.2.0
 boto3==1.26.99
@@ -6,6 +7,8 @@ certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
 cryptography==40.0.1
+Django==4.1.7
+freezegun==1.2.2
 idna==3.4
 iniconfig==2.0.0
 Jinja2==3.1.2
@@ -17,6 +20,7 @@ packaging==23.0
 pandas==1.5.3
 pg8000==1.29.4
 pluggy==1.0.0
+pyarrow==11.0.0
 pycparser==2.21
 pytest==7.2.2
 python-dateutil==2.8.2
@@ -27,6 +31,7 @@ responses==0.23.1
 s3transfer==0.6.0
 scramp==1.4.4
 six==1.16.0
+sqlparse==0.4.3
 types-PyYAML==6.0.12.8
 urllib3==1.26.15
 Werkzeug==2.2.3
