--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,7 @@ coverage.xml
 .pytest_cache/
 
 # sensitive
-setup_production_chedentials.sh
-setup_test_credentials.sh
+*_chedentials.sh
 
 # pyenv
 .python-version
@@ -35,3 +34,6 @@ temp_test*
 
 # data in s3 simulation
 local/aws/
+
+# local scripts
+bin/
