add tf config to deploy triggerless load lambda

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ terraform/.terraform/
 terraform/.terraform.lock.hcl
 
 function_zips/*
+
+.terraform.lock.hcl
+terraform.tfstate
+.terraform/
+
+*.zip
