--- a/src/load/requirements.all.txt
+++ b/src/load/requirements.all.txt
@@ -6,13 +6,16 @@ async-timeout==4.0.2
 attrs==22.2.0
 botocore==1.27.59
 charset-normalizer==3.1.0
+cramjam==2.6.2
 fastparquet==2023.2.0
+frozenlist==1.3.3
 fsspec==2023.3.0
 idna==3.4
 jmespath==1.0.1
 multidict==6.0.4
 numpy==1.24.2
 packaging==23.0
+pandas==2.0.0
 python-dateutil==2.8.2
 pytz==2023.3
 s3fs==2023.3.0
