--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
             uses: hashicorp/setup-terraform@v2.0.3
           - name: Terraform Init
             run: terraform init
-            working-directory: ./terraform
+            working-directory: ./deployment/terraform
           - name: Terraform Plan
             id: plan
             run: terraform plan
