updating terraform command in YAML

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,7 +57,7 @@ jobs:
           - name: Install Terraform
             uses: hashicorp/setup-terraform@v2.0.3
           - name: Terraform Init
-            run: terraform init
+            run: terraform init -reconfigure
             working-directory: ./deployment/terraform
           - name: Terraform Plan
             id: plan
