adds reconfigure if plan fails

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,7 +65,7 @@ jobs:
         working-directory: ./terraform
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
-        run: exit 1
+        run: terraform init -reconfigure
         working-directory: ./terraform
       - name: Terraform Apply
         run: terraform apply -auto-approve
